# COMP3710

./: .gitignore  .pre-commit-config.yaml  eigenfaces_pt.ipynb  eigenfaces_walkthrough.ipynb  fractals_colab.ipynb  pyproject.toml  rangpur.txt  utils.py
assignement_1/: barnsley_fern.py  fractals.ipynb  gaussian_blur.py  ikeda_map.py  julia_animation.py
assignement_2/: CIFAR10.ipynb  cnn.ipynb  models.py  slurm.sh
assignement_2/cifar10/: CIFAR10.ipynb  cifar10_train.py  err.txt  models.py  out.txt  shakes_resnet18.py  slurm.sh  test.py  training.py
assignement_2/cnn/: cnn.ipynb
assignement_2/eigenfaces/: cnn_eigenfaces.ipynb  eigenfaces_pt.ipynb  eigenfaces_walkthrough.ipynb  mnist_pca.py
assignement_2/utils/: utils.py
assignement_2/vae/: dataset.py  generation.py  inference.py  model.py  models.py  plot_latent_space.py  run.py  slurm.sh  utils.py  vae_train.py  vae_tut.py
assignement_2/vae/vae_tutorial/: base.py
autoencoder_upscaling/: main.py  upscale_mnist.py
cifar10/: cifar10_train.py  err.txt  slurm.sh
fractals/: fractals_colab.ipynb  gaussian_blur.py  ikeda_map.py  julia_animation.py  main.py
vae/: err.txt  vae_train.py
vae/vae_tutorial/: vanilla_vae.py  vanilla_vae_run.py
