[tool.poetry]
name = "comp3710"
version = "0.1.0"
description = ""
authors = ["Lars Moan <lars.ostberg.moan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
opencv-python = "^4.8.0.76"
python-dotenv = "^1.0.0"
scikit-learn = "^1.3.0"
torchvision = "^0.15.2"
ipython-autotime = "^0.3.1"
isort = "^5.12.0"
black = "^24.3.0"
flake8 = "^6.1.0"
gdown = "^4.7.1"
wandb = "^0.15.10"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
